--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "client",
     "server"
   ],
+  "scripts": {
+    "dev": "turbo run dev"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
