--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
-    "build": {},
-    "deploy": {},
-    "test": {},
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
 
-    "lint": {},
     "dev": {
       "cache": false,
       "persistent": true
