--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-router": "^1.31.26",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.31.26",
+    "@tanstack/router-vite-plugin": "^1.31.18",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
