--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@nextui-org/react": "^2.3.6",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-router": "^1.31.26",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.32.1",
+    "@tanstack/react-query-devtools": "^5.35.1",
     "@tanstack/router-devtools": "^1.31.26",
     "@tanstack/router-vite-plugin": "^1.31.18",
     "@types/react": "^18.2.66",
